--- a/app/html/components/_about.html
+++ b/app/html/components/_about.html
@@ -1,4 +1,4 @@
-<section class="about section">
+<section id="about" class="about section">
   <div class="container">
     <h2 class="about__title title">
       О клинике
@@ -9,7 +9,6 @@
     </h3>
 
     <div class="about__content">
-
       <div class="about__info">
         <p class="about__info-text">
           Философия клиники Ваша здоровая улыбка – наша работа. В стенах нашей стоматологической клиники Вы всегда
@@ -37,8 +36,6 @@
       <div class="about__img-box">
         <img class="about__info-img" src="images/about/info-img.jpg" alt="фото кабинета Стоматологии">
       </div>
-
-
     </div>
 
     <div class="about__slider">
@@ -55,7 +52,6 @@
       </button>
 
       <ul class="about__inner">
-
         <li class="about__item">
           <div class="about__box">
             <img class="about__img" src="images/about/img-1.jpg" alt="фото отзывы клиентов">
@@ -85,7 +81,6 @@
             <img class="about__img" src="images/about/img-3.jpg" alt="фото отзывы клиентов">
           </div>
         </li>
-
       </ul>
     </div>
   </div>
