--- a/app/html/components/_assistant.html
+++ b/app/html/components/_assistant.html
@@ -1,4 +1,4 @@
-<section class="assistant section">
+<section id="assistant" class="assistant section">
   <div class="container">
 
     <h3 class="assistant__subtitle subtitle">
@@ -6,11 +6,9 @@
       специалиста
     </h3>
 
-
     <ul class="assistant__inner">
-
       <li class="assistant__item">
-        <a class="assistant__link" href="#">
+        <a class="assistant__link" href="assistant_html/surgery.html">
           <h5 class="assistant__item-title">
             Хирургия
           </h5>
@@ -23,7 +21,7 @@
       </li>
 
       <li class="assistant__item">
-        <a class="assistant__link" href="#">
+        <a class="assistant__link" href="assistant_html/therapy.html">
           <h5 class="assistant__item-title">
             Терапия
           </h5>
@@ -36,7 +34,7 @@
       </li>
 
       <li class="assistant__item">
-        <a class="assistant__link" href="#">
+        <a class="assistant__link" href="assistant_html/orthopedics.html">
           <h5 class="assistant__item-title">
             Ортопедия
           </h5>
@@ -49,7 +47,7 @@
       </li>
 
       <li class="assistant__item">
-        <a class="assistant__link" href="#">
+        <a class="assistant__link" href="assistant_html/implantation.html">
           <h5 class="assistant__item-title">
             Имплантация
           </h5>
@@ -62,7 +60,7 @@
       </li>
 
       <li class="assistant__item">
-        <a class="assistant__link" href="#">
+        <a class="assistant__link" href="assistant_html/orthodontics.html">
           <h5 class="assistant__item-title">
             Ортодонтия
           </h5>
@@ -75,7 +73,7 @@
       </li>
 
       <li class="assistant__item">
-        <a class="assistant__link" href="#">
+        <a class="assistant__link" href="assistant_html/whitening.html">
           <h5 class="assistant__item-title">
             Отбеливание
           </h5>
@@ -87,7 +85,5 @@
         </a>
       </li>
     </ul>
-
-
   </div>
 </section>
