--- a/app/html/components/_documentation.html
+++ b/app/html/components/_documentation.html
@@ -1,4 +1,4 @@
-<section class="documentation section">
+<section id="documentation" class="documentation section">
   <div class="container">
     <h2 class="documentation__title title">
       Лицензии и награды
@@ -7,7 +7,6 @@
     <h3 class="documentation__subtitle subtitle">
       Деятельность клиники сертифицирована, мы имеем все необходимые лицензии и разрешающие документы.
     </h3>
-
 
     <div class="documentation__slider">
       <button class="documentation__btn-prew slide-arow slide-arow--prew" type="button">
@@ -23,7 +22,6 @@
       </button>
 
       <ul class="documentation__inner">
-
         <li class="documentation__item">
               <img class="documentation__img" src="images/documentation/documentation-1.png" alt="фото документа">
         </li>
@@ -43,10 +41,7 @@
         <li class="documentation__item">
               <img class="documentation__img" src="images/documentation/documentation-1.png" alt="фото документа">
         </li>
-
       </ul>
-
     </div>
-
   </div>
 </section>
