--- a/app/html/components/_footer.html
+++ b/app/html/components/_footer.html
@@ -1,7 +1,7 @@
 <footer class="footer">
   <div class="footer__container container">
     <div class="footer__logo-box logo-box" href="#">
-      <a class="logo-box__logo" href="#body">
+      <a class="logo-box__logo" href="#header">
         <img class="logo-box__img" src="images/logo/logo.svg" alt="логотип клиники">
       </a>
 
@@ -10,60 +10,63 @@
       </div>
     </div>
 
+    <button class="burger" type="button">
+      <span class="burger__line"></span>
+      <span class="sr-only">Мобильное меню</span>
+    </button>
+
     <nav class="footer__menu menu">
-        <ul class="menu__list">
-          <li class="menu__item">
-            <a class="menu__link" href="#">
-              Главная
-            </a>
-          </li>
+      <ul class="menu__list">
+        <li class="menu__item">
+          <a class="menu__link" href="#header">
+            Главная
+          </a>
+        </li>
 
-          <li class="menu__item">
-            <a class="menu__link" href="#">
-              Акции
-            </a>
-          </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#stock">
+            Aкции
+          </a>
+        </li>
 
-          <li class="menu__item">
-            <a class="menu__link" href="#">
-              Услуги
-            </a>
-          </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#services">
+            Услуги
+          </a>
+        </li>
 
-          <li class="menu__item">
-            <a class="menu__link" href="#">
-              Врачи
-            </a>
-          </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#doctors">
+            Врачи
+          </a>
+        </li>
 
-          <li class="menu__item">
-            <a class="menu__link" href="#">
-              Отзывы
-            </a>
-          </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#reviews">
+            Отзывы
+          </a>
+        </li>
 
-          <li class="menu__item">
-            <a class="menu__link" href="#">
-              Лицензии
-            </a>
-          </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#documentation">
+            Лицензии
+          </a>
+        </li>
 
-          <li class="menu__item">
-            <a class="menu__link" href="#">
-              О клинике
-            </a>
-          </li>
+        <li class="menu__item">
+          <a class="menu__link" href="#about">
+            О клинике
+          </a>
+        </li>
 
-          <li class="menu__item">
-            <a class="menu__link" href="#">
-              Контакты
-            </a>
-          </li>
-        </ul>
-    
+        <li class="menu__item">
+          <a class="menu__link" href="#contacts">
+            Контакты
+          </a>
+        </li>
+      </ul>
 
       <button class="menu__cross" type="button"></button>
     </nav>
   </div>
-
 </footer>
