--- a/app/html/components/_free-inspection.html
+++ b/app/html/components/_free-inspection.html
@@ -10,7 +10,6 @@
 
     <ul class="free-inspection__inner">
       <li class="free-inspection__item">
-
         <div class="free-inspection__item-wrapper">
           <img class="free-inspection__item-img" src="images/free-inspection/free-inspection-one.jpg"
             alt="Фото полного осмотра" width="410" height="280">
@@ -53,8 +52,8 @@
       </li>
     </ul>
 
-    <button class="free-inspection__button button">
+    <a class="free-inspection__button button" href="#registration">
       Записаться
-    </button>
+    </a>
   </div>
 </section>
