--- a/app/html/components/_reviews.html
+++ b/app/html/components/_reviews.html
@@ -1,4 +1,4 @@
-<section class="reviews section">
+<section id="reviews" class="reviews section">
   <div class="container">
     <h2 class="reviews__title title">
       Отзывы
@@ -23,11 +23,10 @@
       </button>
 
       <ul class="reviews__inner">
-
         <li class="reviews__item">
           <div class="reviews__box">
             <div class="reviews__img-wrapper">
-              <img class="reviews__img" src="images/reviews/people-1.jpg" alt="фото пациента" >
+              <img class="reviews__img" src="images/reviews/people-1.jpg" alt="фото пациента">
             </div>
 
             <div class="reviews__item-content">
@@ -46,7 +45,6 @@
                 12.02.2020
               </p>
             </div>
-
           </div>
         </li>
 
@@ -96,7 +94,6 @@
                 12.02.2020
               </p>
             </div>
-
           </div>
         </li>
 
@@ -123,7 +120,6 @@
             </div>
           </div>
         </li>
-
       </ul>
     </div>
 
@@ -137,6 +133,4 @@
       </a>
     </div>
   </div>
-
-
 </section>
