--- a/app/html/components/_services.html
+++ b/app/html/components/_services.html
@@ -1,4 +1,4 @@
-<section class="services section">
+<section id="services" class="services section">
   <div class="container">
     <h2 class="services__title title">
       Услуги
@@ -26,7 +26,6 @@
             <li class="banners__services-item">
               Удаление зубов любой сложности
             </li>
-
           </ul>
         </div>
 
@@ -35,7 +34,7 @@
             <ul class="banners__social social">
               <li class="social__item">
                 <a class="social__link" href="#">
-                  <img class="social__img" src="images/social/telegram.svg" alt="сылка на тлеграм">
+                  <img class="social__img" src="images/social/telegram.svg" alt="сылка на телеграм">
                 </a>
               </li>
 
@@ -52,16 +51,15 @@
           </div>
 
           <div class="banners__buttons">
-            <button class="banners__button button button--transparent" type="button">
+            <a class="banners__button button button--transparent" href="#registration">
               Записаться
-            </button>
+            </a>
 
-            <button class="banners__button button button--transparent-blue" type="button">
+            <a class="banners__button button button--transparent-blue popup-link" href="#popup_2">
               Узнать цены
-            </button>
+            </a>
           </div>
         </div>
-
       </li>
 
       <li class="banners__item">
@@ -115,16 +113,15 @@
           </div>
 
           <div class="banners__buttons">
-            <button class="banners__button button button--transparent" type="button">
+            <a class="banners__button button button--transparent" href="#registration">
               Записаться
-            </button>
+            </a>
 
-            <button class="banners__button button button--transparent-blue" type="button">
+            <a class="banners__button button button--transparent-blue popup-link" href="#popup_2">
               Узнать цены
-            </button>
+            </a>
           </div>
         </div>
-
       </li>
 
       <li class="banners__item">
@@ -156,7 +153,6 @@
             <li class="banners__services-item">
               Установка виниров
             </li>
-
           </ul>
         </div>
 
@@ -182,16 +178,15 @@
           </div>
 
           <div class="banners__buttons">
-            <button class="banners__button button button--transparent" type="button">
+            <a class="banners__button button button--transparent" href="#registration">
               Записаться
-            </button>
+            </a>
 
-            <button class="banners__button button button--transparent-blue" type="button">
+            <a class="banners__button button button--transparent-blue popup-link" href="#popup_2">
               Узнать цены
-            </button>
+            </a>
           </div>
         </div>
-
       </li>
 
       <li class="banners__item">
@@ -245,16 +240,15 @@
           </div>
 
           <div class="banners__buttons">
-            <button class="banners__button button button--transparent" type="button">
+            <a class="banners__button button button--transparent" href="#registration">
               Записаться
-            </button>
+            </a>
 
-            <button class="banners__button button button--transparent-blue" type="button">
+            <a class="banners__button button button--transparent-blue popup-link" href="#popup_2">
               Узнать цены
-            </button>
+            </a>
           </div>
         </div>
-
       </li>
 
       <li class="banners__item">
@@ -282,7 +276,6 @@
             <li class="banners__services-item">
               Полная диагностика и лечение взрослых и детей
             </li>
-
           </ul>
         </div>
 
@@ -308,16 +301,15 @@
           </div>
 
           <div class="banners__buttons">
-            <button class="banners__button button button--transparent" type="button">
+            <a class="banners__button button button--transparent" href="#registration">
               Записаться
-            </button>
+            </a>
 
-            <button class="banners__button button button--transparent-blue" type="button">
+            <a class="banners__button button button--transparent-blue popup-link" href="#popup_2">
               Узнать цены
-            </button>
+            </a>
           </div>
         </div>
-
       </li>
 
       <li class="banners__item">
@@ -337,7 +329,6 @@
             <li class="banners__services-item">
               Система Opalescence Boost
             </li>
-
           </ul>
         </div>
 
@@ -363,21 +354,19 @@
           </div>
 
           <div class="banners__buttons">
-            <button class="banners__button button button--transparent" type="button">
+            <a class="banners__button button button--transparent" href="#registration">
               Записаться
-            </button>
+            </a>
 
-            <button class="banners__button button button--transparent-blue" type="button">
+            <a class="banners__button button button--transparent-blue popup-link" href="#popup_2">
               Узнать цены
-            </button>
+            </a>
           </div>
         </div>
-
       </li>
     </ul>
 
     <div class="services__technology technology">
-
       <div class="technology__top">
         <div class="technology__info">
           <h3 class="technology__title">
@@ -390,15 +379,15 @@
               Посмотрите видео о технологии
             </p>
 
-            <a class="technology__video-link" data-fancybox href="#"
+            <a class="technology__video-link popup-link" href="#popup_3"
               style="background-image: url('images/services/technology-bg.jpg')">
               <span class="sr-only">видео о технологии</span>
             </a>
           </div>
 
-          <button class="technology__button button button--transparent" type="button">
+          <a class="banners__button banners__button--video button button--transparent-blue popup-link" href="#popup_2">
             Узнать цены
-          </button>
+          </a>
         </div>
 
         <ul class="technology__top-inner">
@@ -441,7 +430,6 @@
       </div>
 
       <div class="technology__bottom" style="background-image: url('images/services/bottom-bg.jpg')">
-
         <ul class="technology__step-inner">
           <li class="technology__step-item">
             <span class="technology__step-num">1</span>
@@ -489,13 +477,13 @@
         </div>
 
         <div class="technology__buttons">
-          <button class="technology__bottom-button button button--transparent" type="button">
+          <a class="banners__button button button--transparent" href="#registration">
             Записаться
-          </button>
+          </a>
 
-          <button class="technology__bottom-button button" type="button">
+          <a class="technology__bottom-button button" href="#assistant">
             Выбрать врача
-          </button>
+          </a>
         </div>
       </div>
     </div>
