--- a/app/html/components/_stock.html
+++ b/app/html/components/_stock.html
@@ -1,4 +1,4 @@
-<section class="stock section">
+<section id="stock" class="stock section">
   <div class="container">
     <h2 class="stock__title title">
       Акции
@@ -25,30 +25,34 @@
       <ul class="stock__inner">
         <li class="stock__item">
           <img class="stock__item-img" src="images/stock/slide-1.png" alt="">
-          <button class="stock__button button button--transparent" type="button">
+
+          <a class="popup-link stock__button button button--transparent" href="#popup">
             Участвовать
-          </button>
+          </a>
         </li>
 
         <li class="stock__item">
           <img class="stock__item-img" src="images/stock/slide-2.png" alt="">
-          <button class="stock__button button button--transparent" type="button">
+
+          <a class="popup-link stock__button button button--transparent" href="#popup">
             Участвовать
-          </button>
+          </a>
         </li>
 
         <li class="stock__item">
           <img class="stock__item-img" src="images/stock/slide-3.png" alt="">
-          <button class="stock__button button button--transparent" type="button">
+
+          <a class="popup-link stock__button button button--transparent" href="#popup">
             Участвовать
-          </button>
+          </a>
         </li>
 
         <li class="stock__item">
           <img class="stock__item-img" src="images/stock/slide-2.png" alt="">
-          <button class="stock__button button button--transparent" type="button">
+
+          <a class="popup-link stock__button button button--transparent" href="#popup">
             Участвовать
-          </button>
+          </a>
         </li>
       </ul>
     </div>
