--- a/app/html/components/_contacts.html
+++ b/app/html/components/_contacts.html
@@ -1,6 +1,14 @@
-<section class="contacts section">
+<section id="contacts" class="contacts section">
 
-  <div class="contacts__wrapper" style="background-image: url('images/bg/contacts-bg.jpg')">
+  <div class="map">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d30720.897955263943!2d38.764345095975976!3d55.089733259079814!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x6232c8c875860e4a!2zNTXCsDA1JzM4LjEiTiAzOMKwNDYnMTMuNCJF!5e0!3m2!1sru!2sru!4v1652530114773!5m2!1sru!2sru"
+      max-width="1920" width="100%" height="540" style="border:0;" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade">
+    </iframe>
+  </div>
+
+  <div class="contacts__wrapper">
     <div class="container">
       <div class="contacts__content">
         <div class="contacts__title">
@@ -22,7 +30,6 @@
           <p class="contacts__time-text">
             последняя запись до 19:00
           </p>
-
 
           <ul class="contacts__phones-inner">
             <li class="contacts__phone">
@@ -74,10 +81,8 @@
             </p>
           </div>
         </address>
-
         </form>
       </div>
     </div>
   </div>
-
 </section>
