--- a/app/html/components/_header.html
+++ b/app/html/components/_header.html
@@ -1,10 +1,10 @@
-<header class="header">
+<header id="header" class="header">
   <div class="container">
     <div class="header__top header-top">
       <div class="header-top__info">
 
-        <div class="header-top__logo-box logo-box" href="#">
-          <a class="logo-box__logo" href="#body">
+        <div class="header-top__logo-box logo-box">
+          <a class="logo-box__logo" href="#header">
             <img class="logo-box__img" src="images/logo/logo.svg" alt="логотип клиники">
           </a>
 
@@ -72,8 +72,6 @@
           <span class="burger__line"></span>
           <span class="sr-only">Мобильное меню</span>
         </button>
-
-
       </div>
     </div>
   </div>
@@ -82,49 +80,49 @@
     <div class="container">
       <ul class="menu__list">
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#header">
             Главная
           </a>
         </li>
 
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#stock">
             Акции
           </a>
         </li>
 
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#services">
             Услуги
           </a>
         </li>
 
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#doctors">
             Врачи
           </a>
         </li>
 
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#reviews">
             Отзывы
           </a>
         </li>
 
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#documentation">
             Лицензии
           </a>
         </li>
 
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#about">
             О клинике
           </a>
         </li>
 
         <li class="menu__item">
-          <a class="menu__link" href="#">
+          <a class="menu__link" href="#contacts">
             Контакты
           </a>
         </li>
@@ -146,14 +144,13 @@
 
       <div class="header-container__box">
         <p class="header-container__text">
-          Запишитесь на <span>бесплатную</span>  первичную консультацию - диагностику зубов
+          Запишитесь на <span>бесплатную</span> первичную консультацию - диагностику зубов
         </p>
 
-        <button class="header-container__button button">
+        <a class="header-container__button button" href="#registration">
           Записаться
-        </button>
+        </a>
       </div>
-
     </div>
   </div>
 </header>
