--- a/app/html/components/_registration.html
+++ b/app/html/components/_registration.html
@@ -1,29 +1,27 @@
-<section class="registration section">
-
+<section id="registration" class="registration section">
   <div class="registration__wrapper" style="background-image: url('images/bg/registration-bg.jpg')">
     <div class="container">
-      <div class="registration__content">
-        <div class="registration__title">
+      <div class="registration__content record">
+        <div class="record__title">
           Запишитесь на бесплатную первичную консультацию и диагностику зубов
         </div>
 
-        <div class="registration__subtitle">
+        <div class="record__subtitle">
           В ходе консультации вы получите 2-3 плана качественного лечения под ваш бюджет
         </div>
 
-        <form class="registration__form" action="">
+        <form class="record__form" action="">
           <label class="sr-only" for="name">Имя</label>
-          <input class="registration__input" id="name" name="name" type="text" placeholder="Имя" required>
+          <input class="record__input" id="name" name="name" type="text" placeholder="Имя" required>
 
           <label class="sr-only" for="phone">Телефон</label>
-          <input class="registration__input" id="phone" name="phone" type="tel" placeholder="Телефон" required>
+          <input class="record__input" id="phone" name="phone" type="tel" placeholder="Телефон" required>
 
-          <button class="registration__button button" type="button">
+          <button class="record__button button" type="button">
             Записаться
           </button>
         </form>
       </div>
     </div>
   </div>
-
 </section>
