--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -1,6 +1,11 @@
 .footer {
-padding: 30px 0;
-background-color: $blue-100;
+  position: relative;
+  padding: 30px 0;
+  margin-top: -8px;
+  background-color: $blue-100;
+
+  // margin-bottom: 60px;
+
   // .footer__container
   &__container {
     display: flex;
@@ -9,11 +14,59 @@ background-color: $blue-100;
   }
 
   // .footer__logo-box
-  &__logo-box {}
+  &__logo-box {
+    margin-right: 60px;
+
+    @include media-1 {
+      margin-right: 13px;
+    }
+
+    @include media-2 {
+      margin-right: 30px;
+    }
+  }
 
   // .footer__menu
   &__menu {
     background-color: transparent;
+  }
+
+  .menu {
+
+    @include media-1 {
+      position: absolute;
+      width: 100%;
+      text-align: center;
+      bottom: 0;
+      left: 0;
+      background-color: $blue-100;
+      transform: translateX(-100%);
+      transition: transform 0.5s;
+
+    }
+
+    &--active {
+      transform: translateY(0);
+    }
+
+    &__cross {
+
+      @include media-1 {
+        display: block;
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        width: 20px;
+        height: 20px;
+        mask: url('../images/sprites/sprite.svg#cross') center / cover no-repeat;
+        background-color: $blue-900;
+      }
+
+    }
+  }
+
+  .burger {
+    min-width: 60px;
   }
 }
 
