--- a/app/scss/common/global.scss
+++ b/app/scss/common/global.scss
@@ -18,18 +18,20 @@ body {
     width: 100%;
     height: 100%;
     background-color: rgba(0, 0, 0, 0);
-    z-index: -1;
-    transition: background-color 0.3s;
+    opacity: 0;
+    visibility: hidden;
+    z-index: 1;
+    transition: all 0.3s;
   }
 
   &.lock {
     overflow: hidden;
 
     &::after {
-      background-color: rgba(0, 0, 0, 0.15);
-      z-index: 1;
+      background-color: rgba(0, 0, 0, 0.7);
+      opacity: 1;
+      visibility: visible;
     }
-
   }
 }
 
@@ -98,15 +100,65 @@ body {
   }
 }
 
+.menu {
+  padding: 9px 0;
+  background-color: #d1fff0;
+  z-index: 2;
+
+  // .menu__list
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+
+    @include media-1 {
+      display: block;
+      overflow-y: auto;
+    }
+  }
+
+  // .menu__item
+  &__item {
+    color: $blue-700;
+
+    &:not(:last-child) {
+      margin-right: 30px;
+
+      @include media-1 {
+        margin-right: 0;
+      }
+    }
+
+
+  }
+
+  // .menu__link
+  &__link {
+    transition: color 0.3s;
+
+    @include media-1 {
+      display: block;
+      padding: 10px;
+    }
+
+    &:hover {
+      color: #246877;
+    }
+  }
+
+  &__cross {
+    display: none;
+  }
+}
+
 .main {
   flex-grow: 1;
 }
 
 .section {
-  padding: 90px 0 0;
+  padding: 80px 0 0;
 
   @include media-3 {
-    padding: 60px 0 0;
+    padding: 0 0 60px;
   }
 }
 
@@ -185,9 +237,6 @@ body {
     font-size: 20px;
   }
 
-  // @include media-3 {
-  // }
-
   @include media-4 {
     font-size: 16px;
   }
@@ -215,11 +264,9 @@ body {
     width: 18px;
     height: 18px;
     border-radius: 50%;
-    background-color: $blue-100;
+    background-color: $blue-300;
     transition: background-color 0.3s, border-color 0.3s;
     cursor: pointer;
-
-
   }
 
   & .slick-active {
@@ -227,7 +274,6 @@ body {
       width: 24px;
       height: 24px;
       background-color: $blue-700;
-
     }
   }
 }
@@ -245,7 +291,7 @@ body {
   z-index: 1;
   transition: background-color 0.3s;
 
-  &:hover{
+  &:hover {
     background-color: $blue-300;
   }
 
