--- a/app/scss/components/social.scss
+++ b/app/scss/components/social.scss
@@ -7,12 +7,6 @@
       margin-right: 10px;
     }
   }
-
-  // .social__link
-  &__link {}
-
-  // .social__img
-  &__img {}
 }
 
 .social-wrapper {
@@ -20,6 +14,7 @@
   justify-content: center;
   align-items: center;
 
+  //.social-wrapper__text
   &__text {
     font-weight: 400;
     line-height: 1.2;
