--- a/app/scss/section/about.scss
+++ b/app/scss/section/about.scss
@@ -1,8 +1,6 @@
 .about {
-  padding-top: 120px;
-
-  // .about__title
-  &__title {}
+  // padding-top: 120px;
+  padding-bottom: 60px;
 
   // .about__subtitle
   &__subtitle {
@@ -23,10 +21,6 @@
     @include media-3 {
       display: block;
     }
-
-    // @include media-3 {
-    //   flex-direction: column;
-    // }
   }
 
   // .about__info
@@ -41,7 +35,6 @@
 
     @include media-3 {
       max-width: 100%;
-      // width: 100%;
     }
   }
 
@@ -94,8 +87,6 @@
       }
     }
 
-
-
     &::before {
       content: '';
       position: absolute;
@@ -117,18 +108,9 @@
     border-radius: 20px;
     filter: drop-shadow(0px 15px 20px rgba(0, 0, 0, 0.1));
 
-    // position: relative;
-    // display: block;
-    // width: 100%;
-    // padding-bottom: 32.5%;
-
     @include media-1 {
       max-width: 630px;
       width: 100%;
-    }
-
-    @include media-2 {
-      // min-width: 350px;
     }
 
     @include media-3 {
@@ -140,15 +122,6 @@
 
   // .about__info-img
   &__info-img {
-
-
-    // position: absolute;
-    // top: 0;
-    // left: 0;
-    // width: 100%;
-    // height: 100%;
-    // object-fit: contain;
-    // padding-right: 50px;
 
     @include media-1 {
       max-width: 482px;
@@ -184,12 +157,6 @@
     }
   }
 
-  // .about__btn-prew
-  &__btn-prew {}
-
-  // .about__btn-next
-  &__btn-next {}
-
   // .about__inner
   &__inner {
     .slick-list {
@@ -201,8 +168,6 @@
         margin-right: -10px;
         margin-left: -10px;
       }
-
-
     }
 
     .slick-track {
@@ -212,12 +177,7 @@
     .slick-slide {
       margin: 0;
 
-
-
       &>div {
-        // position: relative;
-        // width: 100%;
-        // height: 250px;
         text-align: center;
 
       }
@@ -241,7 +201,7 @@
   // .about__box
   &__box {
     border-radius: 20px;
-    box-shadow: 0px 15px 17px rgba(5, 3, 3, 0.1);
+    box-shadow: 0 15px 17px rgba(5, 3, 3, 0.1);
     overflow: hidden;
   }
 
@@ -254,7 +214,6 @@
 
     @include media-4 {
       margin: 0 auto;
-      // max-width: 100%;
     }
   }
 }
