--- a/app/scss/section/assistant.scss
+++ b/app/scss/section/assistant.scss
@@ -1,4 +1,5 @@
 .assistant {
+  padding-bottom: 40px;
 
   // .assistant__subtitle
   &__subtitle {
@@ -23,13 +24,10 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    // grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-    // display: grid;
-    // grid-template-columns: repeat(3, 1fr);
-    gap:80px 30px;
+    gap: 80px 30px;
     text-align: center;
 
-    
+
 
     @include media-2 {
       padding: 0 54px;
@@ -38,30 +36,25 @@
     @include media-4 {
       padding: 0;
       flex-direction: column;
-      gap:50px 30px;
+      gap: 50px 30px;
     }
   }
 
   // .assistant__item
-  &__item {
+  &__link {
     position: relative;
-    max-width: 190px;
+    display: block;
+    min-width: 190px;
     width: 100%;
     padding: 10px 5px 86px;
-    // margin-bottom: 80px;
     background-color: $blue-100;
-    box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.1);
     border-radius: 20px;
-    cursor: pointer;
+    // cursor: pointer;
     transition: background-color 0.3s;
 
     @include media-4 {
       max-width: 100%;
-    }
-
-
-    &:not(:last-child) {
-      // margin-right: 10px;
     }
 
     &:hover {
@@ -106,7 +99,4 @@
     background-color: $blue-300;
     transition: background-color 0.3s;
   }
-
-  // .assistant__img
-  &__img {}
 }
