--- a/app/scss/section/services.scss
+++ b/app/scss/section/services.scss
@@ -271,7 +271,7 @@
     &::before {
       content: "";
       position: absolute;
-      background-image: url('../../images/services/play.svg');
+      background-image: url('../images/services/play.svg');
       width: 110px;
       height: 110px;
       transition: transform 0.3s;
