--- a/app/html/components/_stock.html
+++ b/app/html/components/_stock.html
@@ -26,7 +26,7 @@
         <li class="stock__item">
           <img class="stock__item-img" src="images/stock/slide-1.png" alt="">
 
-          <a class="popup-link stock__button button button--transparent" href="#popup">
+          <a class="popup-link stock__button button button--transparent" href="#popup_2">
             Участвовать
           </a>
         </li>
