--- a/app/html/components/_services.html
+++ b/app/html/components/_services.html
@@ -11,7 +11,7 @@
 
     <ul class="services__banners banners">
       <li class="banners__item">
-        <img class="banners__img" src="images/services/services-1.png" alt="Изображение удаления зуба">
+        <img class="banners__img" src="./images/services/services-1.png" alt="Изображение удаления зуба">
 
         <div class="banners__top">
           <h3 class="banners__title">
@@ -34,13 +34,13 @@
             <ul class="banners__social social">
               <li class="social__item">
                 <a class="social__link" href="#">
-                  <img class="social__img" src="images/social/telegram.svg" alt="сылка на телеграм">
+                  <img class="social__img" src="./images/social/telegram.svg" alt="сылка на телеграм">
                 </a>
               </li>
 
               <li class="social__item">
                 <a class="social__link" href="#">
-                  <img class="social__img" src="images/social/whatsapp.svg" alt="сылка на ватсап">
+                  <img class="social__img" src="./images/social/whatsapp.svg" alt="сылка на ватсап">
                 </a>
               </li>
             </ul>
