--- a/app/scss/section/services.scss
+++ b/app/scss/section/services.scss
@@ -21,7 +21,7 @@
     z-index: 1;
 
     @include media-3 {
-      min-height: 560px
+      min-height: 560px;
     }
   }
 
@@ -73,7 +73,6 @@
       margin-bottom: 40px;
       font-size: 14px;
     }
-
   }
 
   // .banners__services-inner
@@ -129,7 +128,6 @@
 
     @include media-4 {
       display: block;
-
     }
   }
 
@@ -151,7 +149,6 @@
       padding: 7px 39px;
     }
 
-
     &:not(:last-child) {
       margin-right: 30px;
 
@@ -171,7 +168,6 @@
   .social {
     min-width: 66px;
   }
-
 
   // .technology__top
   &__top {
@@ -254,30 +250,29 @@
     background-repeat: no-repeat;
     background-size: cover;
     outline: transparent;
-    transition: box-shadow 0.3s,
-      transform 0.3s;
+    transition: box-shadow 0.3s, transform 0.3s;
 
     @include media-4 {
       height: 155px;
     }
 
     &::after {
-      content: "";
+      content: '';
       width: 100%;
       height: 100%;
       background-color: rgba(0, 0, 0, 0.2);
     }
 
     &::before {
-      content: "";
+      content: '';
       position: absolute;
-      background-image: url('../../images/services/play.svg');
+      background-image: url('../images/services/play.svg');
       width: 110px;
       height: 110px;
       transition: transform 0.3s;
 
       @include media-4 {
-        transform: scale(0.5)
+        transform: scale(0.5);
       }
     }
 
@@ -285,10 +280,9 @@
       box-shadow: inset 0 0 0 100vh rgba(0, 0, 0, 0.6);
 
       &:before {
-        transform: scale(0.7)
+        transform: scale(0.7);
       }
     }
-
   }
 
   // .technology__button
@@ -489,14 +483,12 @@
     }
   }
 
-
   &__bottom-button {
     @include media-4 {
       display: block;
       margin: 0 auto;
       padding: 7px 39px;
     }
-
 
     &:not(:last-child) {
       margin-right: 30px;
